--- a/study/prepare_interview1/ML_Foundation.tex
+++ b/study/prepare_interview1/ML_Foundation.tex
@@ -63,6 +63,7 @@
 \newcommand{\myexpo}[1]{\operatorname{Expo}\!\left(#1\right)}
 \newcommand{\abs}[1]{\left\lvert #1 \right\rvert}
 \newcommand{\expec}[1]{\operatorname{E}\left[ #1 \right]}
+\newcommand{\expe}{\operatorname{E}}
 \newcommand{\myvar}[1]{\operatorname{Var}\left[#1\right]}
 \newcommand{\myskew}[1]{\operatorname{Skew}\!\left[#1\right]}
 \newcommand{\mykurt}[1]{\operatorname{Kurt}\!\left[#1\right]}
@@ -156,10 +157,64 @@
   \begin{block}{Why use CE loss for classification instead of MSE?}
     \begin{itemize}
       \item It is natural to use  Cross Entropy Loss because it maximizes likelihood.
-      \item Gradient Saturation Problem.
-      Let $z$ be logit which is input for softmax and $\hat{y}$ be probability for each category obtained by $\hat{y} = \Softmax{z}$. In case of cross entropy loss, by chain-rule, we get \[\frac{\partial L}{\partial z_j} = \sum_{i=1}^C \frac{\partial L}{\partial y_i}\frac{\partial y_i}{\partial \hat{y}_i}\frac{\partial \hat{y}_i}{\partial z_j} = \frac{1}{N}\sum_{i=1}^C \frac{-y_i}{\hat{y}_i} (-\hat{y}_i \hat{y}_j + \delta_{ij} \hat{y}_i) = \frac{1}{N} \left[-y_i + \sum_{i=1}^C y_i y_j\right]\]
+      \item Gradient of CE - Softmax is more natural than MSE - Softmax.
+
+      Let $z$ be logit which is input for softmax and $\hat{y}$ be probability for each category obtained by $\hat{y} = \Softmax{z}$. In case of cross entropy loss, by chain-rule, we get \[\frac{\partial L}{\partial z_j} = \sum_{i=1}^C \frac{\partial L}{\partial \hat{y}_i}\frac{\partial \hat{y}_i}{\partial z_j} = \sum_{i=1}^C \frac{-y_i}{\hat{y}_i} (-\hat{y}_i \hat{y}_j + \delta_{ij} \hat{y}_i) =  \left[-y_j + \sum_{i=1}^C y_i \hat{y}_j \right] = \hat{y_j} - y_j\]
+      Thus,
+      \[\frac{\partial L}{\partial z} = \hat{y} - y\]
+
+      In this time, Let's consider the combination of MSE loss and softmax loss. Let define $L = \sum_{i=1}^C (\hat{y}_i - y_i)^2$. Then
+      \[
+        \frac{\partial L}{\partial z_j} = \sum_{i=1}^C \frac{\partial L}{\partial \hat{y}_i}\frac{\partial y_i}{\partial z_j} = \sum_{i=1}^C 2(\hat{y}_i - y_i)(-\hat{y_i}\hat{y_j} + \delta_{ij} \hat{y}_i)
+      \]
+      Which is more unnatural than Cross Entropy.
     \end{itemize}
+
   
+  \end{block}
+\end{frame}
+
+
+\subsection{Bayesian Statistics}
+\begin{frame}{.}
+  For dataset $\mc{D}$ and parameter $\theta$, $P(\theta)$ is called prior distribution and $P(\mc{D}|\theta)$ is called likelihood and $P(\theta|\mc{D})$ is called posterior in Bayesian statistics.
+
+  \bigskip
+  MLE finds theta that makes likelihood maximizes $\theta^\ast = \argmax{\theta} P(\mc{D}|\theta)$, but Maximum A Posteriori(MAP) maximises posterior probability, $\theta^\ast = \argmax{\theta} P(\theta | \mc{D})$.
+
+  \[
+  \begin{gathered}
+    P(\theta | \mc{D}) = \frac{P(\mc{D}|\theta)P(\theta)}{P(\mc{D})} \propto P(\mc{D}|\theta) P(\theta) \\
+    \implies \log{P(\theta |\mc{D})} \propto \log{P(\mc{D}|\theta)} + \log{P(\theta)}
+  \end{gathered}
+  \]
+
+  \bigskip
+  As bigger as $N$, $\abs{\log{P(\mc{D}|\theta)}}$ increases and relatively $\abs{\log{P(\theta)}}$ becomes smaller. So with large datasets, We only utilize MLE instead of MAP.
+\end{frame}
+
+\subsection{Monte Carlo estimator}
+
+\begin{frame}{.}
+  Suppose we want to know the value $\expe_{z \sim p}[f(z)]$. We can estimate this value by 
+  \begin{enumerate}
+    \item Choice $N$ samples $z_is$ from i.i.d. $z \sim p$
+    \item Calculate $\frac{1}{N}\sum_{i=1}^N f(z_i)$.
+  \end{enumerate}
+
+  According to Monte Carlo estimator, $\frac{1}{N}\sum_{i=1}^N f(z_i)$ is unbiased estimator for $\expe_{z \sim p}[f(z)]$.
+\end{frame}
+
+\subsection{Computer Vision}
+\begin{frame}{.}
+  \begin{block}{Template Matching}
+    Traversing the whole image feature with small 2-D window, calculate how similarity the template and image window is matched. Score is calculated by one of belows
+    \[
+    \begin{gathered}
+      R(y,x) = \sum_{h,w} (T(h, w) - I(y+h, x+w))^2 \\
+      R(y,x) = \sum_{h,w} (T())
+    \end{gathered}
+    \]
   \end{block}
 \end{frame}
 
